# pdrl-sose-2022

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTIONS.md  Configurations.md  README.md  ai_player.py  barracks.py  baselines.py  colosseum.py  config.json  elo_generator.py  environment.yml  generate_perf_diagram.py  mcts.py  playing_demo.py  render_elo_diagram.py  render_perf_diagram.py  render_timing_diagram.py
cmake/: test.cmake
distributed_mcts/: CMakeLists.txt  README.md  kinarow.cpp  kinarow.hpp  locked_ptr.hpp  log.hpp  mcts.cpp  mcts.hpp  mcts.i  neural_network.cpp  neural_network.hpp  threadpool.hpp  waiting_queue.hpp
distributed_mcts/test/: kinarow_get_winner.cpp  mcts_internal.cpp  mcts_race_conditions.cpp  mcts_stress_conditions.cpp
experiments/evaluation/: 6x4_conv_lr0.01_vs_6x4_conv_lr0.001.pickle  6x4_conv_lr0.1_vs_6x4_conv_lr0.001.pickle  6x4_conv_lr0.1_vs_6x4_conv_lr0.01.pickle  6x4_conv_vs_resnet.pickle  6x4_densenet_lr0.01_vs_6x4_densenet_lr0.001.pickle  6x4_densenet_lr0.1_vs_6x4_densenet_lr0.001.pickle  6x4_densenet_lr0.1_vs_6x4_densenet_lr0.01.pickle  6x4_densenet_vs_conv.pickle  6x4_densenet_vs_resnet.pickle  6x4_resnet_lr0.01_vs_6x4_resnet_lr0.001.pickle  6x4_resnet_lr0.1_vs_6x4_resnet_lr0.001.pickle  6x4_resnet_lr0.1_vs_6x4_resnet_lr0.01.pickle
games/: game.py  kinarow.py
models/: neural_network.py
